[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/CPPStage.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Binary.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Instances/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://PIXEARG.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/CPPCode.gd" type="Script" id=6]
[ext_resource path="res://Instances/BannerControl.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

resource_name = "Scroll"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 38 ), Vector2( 0, -1090 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 161, 60.5 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 56, 185 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 71, 71 )

[sub_resource type="DynamicFont" id=5]

size = 32
font_data = ExtResource( 5 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 399.0 ],
"_edit_vertical_guides_": [ 644.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1290.0
margin_bottom = 778.0
color = Color( 0.0509804, 0.0705882, 0.172549, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Binary" type="Node2D" parent="."]
modulate = Color( 0.0313726, 0.141176, 0.294118, 1 )
position = Vector2( 0, 38 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Binary"]
position = Vector2( 343, 312 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite9" type="Sprite" parent="Binary"]
position = Vector2( -267, 312 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite7" type="Sprite" parent="Binary"]
position = Vector2( 343, -308 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite10" type="Sprite" parent="Binary"]
position = Vector2( -267, -308 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="Binary"]
position = Vector2( 942, 312 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite13" type="Sprite" parent="Binary"]
position = Vector2( 1552, 312 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite8" type="Sprite" parent="Binary"]
position = Vector2( 942, -308 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite14" type="Sprite" parent="Binary"]
position = Vector2( 1552, -308 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="Binary"]
position = Vector2( 343, 934 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite12" type="Sprite" parent="Binary"]
position = Vector2( -267, 934 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite6" type="Sprite" parent="Binary"]
position = Vector2( 343, 1554 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite11" type="Sprite" parent="Binary"]
position = Vector2( -267, 1554 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite4" type="Sprite" parent="Binary"]
position = Vector2( 942, 934 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite15" type="Sprite" parent="Binary"]
position = Vector2( 1552, 934 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite5" type="Sprite" parent="Binary"]
position = Vector2( 942, 1554 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite16" type="Sprite" parent="Binary"]
position = Vector2( 1552, 1554 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Binary"]
autoplay = "Scroll"
playback_speed = 0.33
anims/Scroll = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
position = Vector2( -142.286, 31 )
scale = Vector2( 1.34694, 1 )
color = Color( 0.211765, 0.262745, 0.584314, 1 )
antialiased = true
polygon = PoolVector2Array( 217, 487, 273, 608, 461.257, 608, 461.257, 487 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -142.286, 31 )
scale = Vector2( 1.34694, 1 )
polygon = PoolVector2Array( 217, 487, 273, 608, 461.257, 608, 461.257, 487 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 1280, 0 )
scale = Vector2( -1, 1 )

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D2"]
position = Vector2( -142.286, 31 )
scale = Vector2( 1.34694, 1 )
color = Color( 0.211765, 0.262745, 0.584314, 1 )
antialiased = true
polygon = PoolVector2Array( 217, 487, 273, 608, 461.257, 608, 461.257, 487 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2( -142.286, 31 )
scale = Vector2( 1.34694, 1 )
polygon = PoolVector2Array( 217, 487, 273, 608, 461.257, 608, 461.257, 487 )
__meta__ = {
"_edit_lock_": true
}

[node name="Center" type="StaticBody2D" parent="."]
position = Vector2( 479, 518 )

[node name="ColorRect" type="ColorRect" parent="Center"]
margin_right = 322.0
margin_bottom = 121.0
color = Color( 0.211765, 0.262745, 0.584314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center"]
position = Vector2( 161, 60.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( 270, 333 )

[node name="ColorRect" type="ColorRect" parent="Wall"]
margin_left = -56.0
margin_top = -184.0
margin_right = 56.0
margin_bottom = 185.0
color = Color( 0.211765, 0.262745, 0.584314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Block" type="StaticBody2D" parent="."]
position = Vector2( 871, 279 )

[node name="ColorRect" type="ColorRect" parent="Block"]
margin_left = -71.0
margin_top = -71.0
margin_right = 71.0
margin_bottom = 71.0
color = Color( 0.211765, 0.262745, 0.584314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block"]
shape = SubResource( 4 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 13.2229, 97.2393 )
anchor_mode = 0
current = true
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1285
limit_bottom = 780
limit_smoothed = true
smoothing_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 3 )
tracking_list = [ NodePath("../Player1"), NodePath("../Player2") ]

[node name="Player1" parent="." instance=ExtResource( 4 )]
position = Vector2( 553, 453 )
ball_color = Color( 1, 0, 0.376471, 1 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 745, 456 )
ball_color = Color( 0, 0.811765, 1, 1 )
player_number = "2"

[node name="Code" type="Label" parent="."]
margin_left = 456.0
margin_top = 174.0
margin_right = 832.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "#define PLATFORM"
percent_visible = 0.0
script = ExtResource( 6 )

[node name="TimerEvents" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="TimerWall" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="TimerBlock" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="TimerCenter" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BannerControl" parent="CanvasLayer" instance=ExtResource( 7 )]

[connection signal="timeout" from="TimerEvents" to="." method="_on_TimerEvents_timeout"]
[connection signal="timeout" from="TimerWall" to="." method="_on_TimerWall_timeout"]
[connection signal="timeout" from="TimerBlock" to="." method="_on_TimerBlock_timeout"]
[connection signal="timeout" from="TimerCenter" to="." method="_on_TimerCenter_timeout"]
